Fixed message wrapping

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -11,6 +11,7 @@ a {
 
 p {
   line-height: 1.5em;
+  word-wrap: break-word;
 }
 
 nav{
